fixed swipe text overflow

--- a/src/pages/swipe/swipe.scss
+++ b/src/pages/swipe/swipe.scss
@@ -31,9 +31,9 @@ page-swipe {
     .theCard div {
         position: absolute;
         width: 100%;
-        height: 100%;
-        text-align: center;
-        line-height: 200px;
+        height: 400px;
+        padding: 10px;
+        line-height: 25px;
         border-radius: 20px;
         box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         backface-visibility: hidden;
@@ -43,6 +43,8 @@ page-swipe {
         background: white;
         color: black;
         border: 5px solid transparent;
+        overflow-y: auto !important;
+       
         width: 330px;
         height: 230px;
         font-size: 20px;
@@ -56,6 +58,8 @@ page-swipe {
         height: 230px;
         font-size: 20px;
         border-radius: 20px;
+        overflow-y: auto !important;
+      
         transform: rotateY(180deg);
         -webkit-transform: rotateY(180deg);
     }
